# fluessig

./: .codespellrc  .gitignore  .housekeeping.toml  .vale.ini  CHANGELOG.md  Cargo.toml  DESIGN.md  FINDINGS.md  README.md  api.json  catalog.json  entl.tsp  plan.txt  schema_docs.json
.github/: dependabot.yml
.github/workflows/: ci.yml  housekeeping.yml
crates/callback-demo-node/: Cargo.toml  build.rs  catalog.json  consumer.mjs  regen.sh  run.sh
crates/callback-demo-node/src/: core_impl.rs  generated.rs  lib.rs
crates/callback-demo-php/: Cargo.toml  api.json  catalog.json  consumer.php  regen.sh  run.sh
crates/callback-demo-php/src/: core_impl.rs  generated.rs  lib.rs
crates/callback-demo-py/: Cargo.toml  api.json  consumer.py  regen.sh  run.sh
crates/callback-demo-py/src/: core_impl.rs  generated.rs  lib.rs
crates/callback-demo-ruby/: Cargo.toml  api.json  catalog.json  consumer.rb  regen.sh  run.sh
crates/callback-demo-ruby/src/: core_impl.rs  generated.rs  lib.rs
crates/callback-demo-wasm/: Cargo.toml  api.json  catalog.json  regen.sh  run.sh
crates/callback-demo-wasm/src/: core_impl.rs  generated.rs  lib.rs
crates/cargo-fluessig/: Cargo.toml
crates/cargo-fluessig/src/: main.rs
crates/cpp-demo/: Cargo.toml  api.json  catalog.json  consumer.c  consumer.cpp  cpp_demo.h  cpp_demo.hpp  regen.sh  run.sh
crates/cpp-demo/src/: core_impl.rs  generated.rs  lib.rs  schema.rs
crates/derive-demo/: Cargo.toml  advanced.json  advanced.tsp  api.json  api.tsp  catalog.json  graph.json  graph.tsp  leaf_fk.json  leaf_fk.tsp  poly.json  poly.tsp  single_threaded.json
crates/derive-demo/src/: advanced.rs  api.rs  binary.rs  graph.rs  leaf_fk.rs  lib.rs  native.rs  numeric.rs  poly.rs  single_threaded.rs
crates/derive-demo/tests/: advanced_gate.rs  api_gate.rs  api_typespec_equivalence.rs  drift_guard.rs  gate.rs  graph_gate.rs  leaf_fk_gate.rs  numeric_gate.rs  poly_gate.rs  poly_typespec_equivalence.rs  span_gate.rs  typespec_equivalence.rs
crates/derive-demo/tests/common/: mod.rs
crates/disponent-schema-derive/: Cargo.toml
crates/disponent-schema-derive/src/: lib.rs
crates/disponent-schema-derive/tests/: parity.rs
crates/disponent-schema-derive/tests/fixtures/: README.md  api.json  catalog.json
crates/entl-schema-derive/: Cargo.toml
crates/entl-schema-derive/src/: lib.rs
crates/entl-schema-derive/tests/: parity.rs
crates/fluessig-derive/: Cargo.toml
crates/fluessig-derive-macros/: Cargo.toml
crates/fluessig-derive-macros/src/: enum_scalar.rs  export.rs  field_meta.rs  lib.rs  record.rs  union.rs
crates/fluessig-derive/src/: decls.rs  lib.rs  ops.rs  records.rs
crates/fluessig-publish/: Cargo.toml  README.md
crates/fluessig-publish/src/: adapters.rs  lib.rs  main.rs
crates/fluessig-publish/tests/: verify_dry_run.sh
crates/fluessig-runtime/: Cargo.toml
crates/fluessig-runtime/src/: lib.rs
crates/java-demo/: Cargo.toml  Main.java  api.json  run.sh
crates/java-demo-schema/: Cargo.toml
crates/java-demo-schema/src/: lib.rs
crates/java-demo/java/fluessig/: Item.java  Items.java  Store.java  Subscription.java  Ticker.java
crates/java-demo/src/: core_impl.rs  generated.rs  lib.rs
emitter/: api.schema.json  catalog.schema.json  emit.mjs  package.json  test.mjs
experiments/django-sqlite/: FINDINGS.md  README.md
experiments/django-sqlite/project/: .gitignore  fluessig_schema.sql  manage.py
experiments/django-sqlite/project/config/: settings.py
experiments/django-sqlite/project/demo/: admin.py  models.py
experiments/django-sqlite/project/demo/management/commands/: smoke.py
experiments/django-sqlite/schema/: Cargo.toml  catalog.json
experiments/django-sqlite/schema/src/: lib.rs
notes/: async-iterable-streams-python.md  async-iterable-streams-ruby.md  async-iterable-streams.md  callback-function-types.md  class-handle-return.md  derive-front-end-decisions.md  derive-front-end.md  design.md  entl_derive_sketch.rs  java-backend.md  sampo.md  specter-navigators.md
notes/examples/sampo/: disponent.config.toml
scripts/: dev.sh
spike/: .gitignore  README.md  api.json  catalog.json  decorators.js  entl.tsp  extract.mjs  gen.mjs  package.json
src/: api.rs  catalog.rs  codegen.rs  data.rs  ir.rs  lib.rs  observe.rs  readme.rs  rustfmt.rs  sql.rs
src/bindgen/: cpp.rs  cpp_callback.rs  cpp_header.rs  cpp_hpp.rs  fanout.rs  java.rs  java_callback.rs  mcp.rs  mod.rs  node.rs  php.rs  php_callback.rs  python.rs  ruby.rs  ruby_callback.rs  rust_core.rs  wasm.rs
tests/: callback_lowering.rs  class_handle_return.rs  cpp_callback_lowering.rs  cpp_catalog.rs  cross_package_imports.rs  django_models.rs  entl_catalog.rs  export_pinning.rs  java_callback_lowering.rs  java_catalog.rs  mcp.rs  php_callback_lowering.rs  php_catalog.rs  python_stream.rs  readme.rs  ruby_callback_lowering.rs  ruby_stream.rs  runtime_import_fold.rs  single_threaded.rs  subscription_lowering.rs  union_catalog.rs  union_structured.rs  union_structured_langs.rs  union_tag_field_collision.rs  variant_ident_and_keyword_field.rs  wasm_callback_lowering.rs
tests/fixtures/: api.json  catalog.json  decorators.js  entl.tsp  readme.node.md  readme.python.md  readme.ruby.md  readme.rust.md  readme.tpl.md  union.tsp
tests/fixtures/runtime_fold_golden/: cpp.golden  node.golden  php.golden  python.golden  ruby.golden  wasm.golden
tests/fixtures/single_threaded_golden/: api.json  node.golden  python.golden
tests/harness/: README.md  async_iterable_contract.mjs  async_iterable_contract.py  each_enumerator_contract.rb
typespec/: decorators.js  lib.tsp  package.json
