[workspace]
members = [
    "crates/fluessig-derive-macros",
    "crates/fluessig-derive",
    "crates/fluessig-runtime",
    "crates/cargo-fluessig",
    "crates/derive-demo",
    "crates/cpp-demo",
    "crates/entl-schema-derive",
    "crates/disponent-schema-derive",
    "crates/fluessig-publish",
    # The Java (JNI) round-trip harness. Members of the workspace (so they share
    # Cargo.lock and build via `-p`), but DELIBERATELY excluded from
    # `default-members` below — like entl-node/disponent-node in their repos, the
    # jni-linking cdylib + its generated glue are built only by the java
    # round-trip runner / CI leg, never by a bare `cargo build`/`cargo test`.
    "crates/java-demo-schema",
    "crates/java-demo",
    # The node (napi) and python (pyo3) callback round-trip demos. Members so
    # they share Cargo.lock and build via `-p`, but — like java-demo above —
    # DELIBERATELY excluded from `default-members`: their napi/pyo3-linking
    # cdylibs are built only by their own round-trip runners / CI legs, never by
    # a bare `cargo build`/`cargo test`.
    "crates/callback-demo-node",
    "crates/callback-demo-py",
]
# The root is a hybrid package+workspace; without default-members a bare
# `cargo build`/`test` would build only the root package. List both so the
# workspace commands cover the new member too.
default-members = [
    ".",
    "crates/fluessig-derive-macros",
    "crates/fluessig-derive",
    "crates/fluessig-runtime",
    "crates/cargo-fluessig",
    "crates/derive-demo",
    "crates/cpp-demo",
    "crates/entl-schema-derive",
    "crates/disponent-schema-derive",
    "crates/fluessig-publish",
]
resolver = "2"

[package]
name = "fluessig"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Describe a typed entity graph once; project it everywhere — DDL, ORM models, format codecs, language bindings, and an Arrow-fed data plane."
repository = "https://github.com/zmaril/fluessig"

[dependencies]
genco = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"

[profile.release]
lto = "thin"
