[workspace]
members = [
    "crates/fluessig-derive-macros",
    "crates/fluessig-derive",
    "crates/fluessig-runtime",
    "crates/cargo-fluessig",
    "crates/derive-demo",
    "crates/cpp-demo",
    "crates/entl-schema-derive",
    "crates/disponent-schema-derive",
    "crates/fluessig-publish",
    # The Java (JNI) round-trip harness. Members of the workspace (so they share
    # Cargo.lock and build via `-p`), but DELIBERATELY excluded from
    # `default-members` below — like entl-node/disponent-node in their repos, the
    # jni-linking cdylib + its generated glue are built only by the java
    # round-trip runner / CI leg, never by a bare `cargo build`/`cargo test`.
    "crates/java-demo-schema",
    "crates/java-demo",
    # The node (napi) and python (pyo3) callback round-trip demos. Members so
    # they share Cargo.lock and build via `-p`, but — like java-demo above —
    # DELIBERATELY excluded from `default-members`: their napi/pyo3-linking
    # cdylibs are built only by their own round-trip runners / CI legs, never by
    # a bare `cargo build`/`cargo test`.
    "crates/callback-demo-node",
    "crates/callback-demo-py",
    # The Ruby (magnus) callback round-trip demo. Member so it shares Cargo.lock
    # and builds via `-p`, but — like the sibling demos above — DELIBERATELY
    # excluded from `default-members`: its magnus-linking cdylib (which links
    # libruby) is built only by its own round-trip runner / CI leg, never by a
    # bare `cargo build`/`cargo test`.
    "crates/callback-demo-ruby",
    # The wasm-bindgen callback round-trip demo. Member so it shares Cargo.lock
    # and builds via `-p`, but — like the sibling demos above — DELIBERATELY
    # excluded from `default-members`: it targets `wasm32-unknown-unknown` (js-sys
    # / wasm-bindgen do not link for the host), built only by its own compile-proof
    # runner / CI leg (`cargo build --target wasm32-unknown-unknown`), never by a
    # bare host `cargo build`/`cargo test`.
    "crates/callback-demo-wasm",
    # The PHP (ext-php-rs) callback round-trip demo. Member so it shares Cargo.lock
    # and builds via `-p`, but — like the sibling demos above — DELIBERATELY
    # excluded from `default-members`: its ext-php-rs-linking cdylib (which links
    # against the PHP runtime discovered via `php-config`) is built only by its own
    # round-trip runner / CI leg, never by a bare `cargo build`/`cargo test`. PHP
    # callbacks are documented SYNC-ONLY (see the generated PhpCb marker).
    "crates/callback-demo-php",
]
# The root is a hybrid package+workspace; without default-members a bare
# `cargo build`/`test` would build only the root package. List both so the
# workspace commands cover the new member too.
default-members = [
    ".",
    "crates/fluessig-derive-macros",
    "crates/fluessig-derive",
    "crates/fluessig-runtime",
    "crates/cargo-fluessig",
    "crates/derive-demo",
    "crates/cpp-demo",
    "crates/entl-schema-derive",
    "crates/disponent-schema-derive",
    "crates/fluessig-publish",
]
resolver = "2"

[package]
name = "fluessig"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Describe a typed entity graph once; project it everywhere — DDL, ORM models, format codecs, language bindings, and an Arrow-fed data plane."
repository = "https://github.com/zmaril/fluessig"

[dependencies]
genco = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"

[profile.release]
lto = "thin"
