[package]
name = "entl-schema-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The ACID TEST (Slice 8b): entl's full 28-table schema + op surface authored with the fluessig Rust derive front end, proving parity with the TypeSpec-authored entl.tsp."
repository = "https://github.com/zmaril/fluessig"
publish = false

[dependencies]
fluessig-derive = { path = "../fluessig-derive" }

[dev-dependencies]
fluessig = { path = "../.." }
fluessig-derive = { path = "../fluessig-derive" }
serde_json = "1"
