[package]
name = "fluessig-derive-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proc-macros for the fluessig Rust derive front end: #[derive(Entity)], #[derive(Edge)], and catalog!."
repository = "https://github.com/zmaril/fluessig"

[lib]
proc-macro = true

[dependencies]
syn = { version = "3", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
