[package]
name = "fluessig-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The fluessig Rust derive front end: author a scalar entity as a #[derive(Entity)] struct and emit the same catalog.json the loader consumes."
repository = "https://github.com/zmaril/fluessig"

[dependencies]
fluessig = { path = "../.." }
fluessig-derive-macros = { path = "../fluessig-derive-macros" }
serde_json = "1"
