[package]
name = "fluessig-publish"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple, commit-style-agnostic publishing: explicit version + inputs, native-tool registry adapters, dry-run by default."
repository = "https://github.com/zmaril/fluessig"

[[bin]]
name = "fluessig"
path = "src/main.rs"

[lib]
name = "fluessig_publish"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml_edit = "0.22"
serde_json = "1"
tempfile = "3"
